[package]
name = "timer-rs"
description = "A simple timer used to schedule execution of closures at a given timestamp."
version = "0.0.3"
edition = "2021"
rust-version = "1.71"
authors = ["Ruan Petterson <ruan@ruan.eng.br>"]
license = "MIT"
repository = "https://github.com/ruanpetterson/timer-rs"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.19", features = ["macros"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tracing-subscriber = "0.3.17"

[profile.release]
debug = true
